apps/navidrome/k8s.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: media
  labels:
    app.kubernetes.io/name: navidrome
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: navidrome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: navidrome
    spec:
      securityContext:
        fsGroup: 1002
        runAsUser: 1001
        runAsGroup: 1002
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: navidrome
          image: ghcr.io/navidrome/navidrome:0.64.2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 192Mi
          ports:
            - containerPort: 4533
              name: http
          volumeMounts:
            - name: config-vol
              mountPath: /data
            - name: music-vol
              mountPath: /vol_raidz1/music
      nodeSelector:
        node-role/workload: zfs
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      restartPolicy: Always
      volumes:
        - name: config-vol
          hostPath:
            path: /vol_raidz1/container-scheduler/navidrome
            type: DirectoryOrCreate
        - name: music-vol
          hostPath:
            path: /vol_raidz1/music
            type: Directory
