apps/navidrome/k8s.test.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome-test
  namespace: media
  labels:
    app.kubernetes.io/name: navidrome-test
spec:
  type: ClusterIP
  ports:
    - port: 4533
      targetPort: 4533
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: navidrome-test
