apps/navidrome/ingress.enc.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: navidrome
    namespace: media
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:asQzrZFwMlYIOR1heBLxj0M5L9yUax7qieUTKG3AIPN+ttdGCUHxEbu1bMQwl6hZsg==,iv:OZn7M397wQn9ZwC5Ge0RsvUTeNaGbbZlTE4mFC5vWVc=,tag:iV6xq2sZLgMgrfmN6SFxMg==,type:str]
          kind: Rule
          middlewares:
            - name: redirect
              namespace: traefik
            - name: forwardauth-authelia
              namespace: authelia
          services:
            - name: navidrome
              port: 4533
          observability:
            accessLogs: true
    tls: {}
sops:
    age:
        - recipient: age1d2g7tgqpfvxulsusn3m608h60h2hne7yqwv5nh5nd24z6h0hgq0skjkhw8
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxOTVEcnMxaDlJWFU2YVNF
[...]
            OXNoWfByKJ3W3fk4xSiG8ekyPiLbqp9hMW6GXovBVE0/B7V3QcnB8Q==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1q522xtgjrmvr43w7um5rh02ta3yfns635680hz4m7uhw0nfqj5zqgxnz27
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzR3JBaDVCU1lUNytjWkxo
[...]
            KYWl94m/e78kdEVq81fLVQ1GPQWpK10vF9PwMgJ2ng+hdTAtE5bEAA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-09-10T13:09:35Z"
    mac: ENC[AES256_GCM,data:zVFfyGbLefY8GVEIcg7iodPF4x0o3Z/1pOhbyL0qV9DC9vsy1VqDCfYKMSzNm6IxU3Ne3bVi1OXwTMUeAEu+ucF8SujgvCuOQmO8N4NA9fHpPelGVVAWnmZ6ZnnGCdSjUsc37zsJghUCUsE+HyzFfTBpKYiqXs5uHZ9mpvJRXh8=,iv:XkFNo54X3E0zu28pTFKoJPsuuS6VZgYsglYrK5UH1AQ=,tag:xw1EK9dwyWQsOmVnyXa7Yw==,type:str]
    encrypted_regex: ^(data|stringData|email|dnsNames|.*(H|h)osts?|hostname|username|password|url|issuer|argocdServerAdminPassword|oidc.config|commonName|literals|.*awsAccessKeyId|.*awsSecretAccessKey|.*defaultAdminPassword|apiToken|accountId|rootPassword|replicationPassword|adminPassword|root_url|client_secret|auth_url|api_url|PIHOLE_DOMAIN|TUNNEL_DNS_UPSTREAM|customDnsEntries|securityTokenKey|emailRecipients|.*provider_url|.*redirect_url|.*accesskeyEncryption|SEMAPHORE_WEB_ROOT|token|cookieEnc [...]
    version: 3.10.2
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: navidrome-subsonic
    namespace: media
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:rTLTi0FabG/7VVXebYKaEKM4cpmPRhhaTJvRZCy6pnq+jBygCUFjr1TSok84J9DYX6t0F4uuN6a2b8mbTXJMp5jRFp0hmlua0aU+My8XlwacyCY=,iv:jHnuOG3D9QIqQWcAZFB5lcU/CTkJ6Hyd06kw3BWsTGo=,tag:OLMLu5vf0fhZoGg2vGe0rw==,type:str]
          kind: Rule
          middlewares:
            - name: redirect
              namespace: traefik
            - name: forwardauth-authelia-basic-forward-auth
              namespace: authelia
          services:
            - name: navidrome
              port: 4533
          observability:
            accessLogs: true
    tls: {}
sops:
    age:
        - recipient: age1d2g7tgqpfvxulsusn3m608h60h2hne7yqwv5nh5nd24z6h0hgq0skjkhw8
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxOTVEcnMxaDlJWFU2YVNF
[...]
            OXNoWfByKJ3W3fk4xSiG8ekyPiLbqp9hMW6GXovBVE0/B7V3QcnB8Q==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1q522xtgjrmvr43w7um5rh02ta3yfns635680hz4m7uhw0nfqj5zqgxnz27
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzR3JBaDVCU1lUNytjWkxo
[...]
            KYWl94m/e78kdEVq81fLVQ1GPQWpK10vF9PwMgJ2ng+hdTAtE5bEAA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-09-10T13:09:35Z"
    mac: ENC[AES256_GCM,data:zVFfyGbLefY8GVEIcg7iodPF4x0o3Z/1pOhbyL0qV9DC9vsy1VqDCfYKMSzNm6IxU3Ne3bVi1OXwTMUeAEu+ucF8SujgvCuOQmO8N4NA9fHpPelGVVAWnmZ6ZnnGCdSjUsc37zsJghUCUsE+HyzFfTBpKYiqXs5uHZ9mpvJRXh8=,iv:XkFNo54X3E0zu28pTFKoJPsuuS6VZgYsglYrK5UH1AQ=,tag:xw1EK9dwyWQsOmVnyXa7Yw==,type:str]
    encrypted_regex: ^(data|stringData|email|dnsNames|.*(H|h)osts?|hostname|username|password|url|issuer|argocdServerAdminPassword|oidc.config|commonName|literals|.*awsAccessKeyId|.*awsSecretAccessKey|.*defaultAdminPassword|apiToken|accountId|rootPassword|replicationPassword|adminPassword|root_url|client_secret|auth_url|api_url|PIHOLE_DOMAIN|TUNNEL_DNS_UPSTREAM|customDnsEntries|securityTokenKey|emailRecipients|.*provider_url|.*redirect_url|.*accesskeyEncryption|SEMAPHORE_WEB_ROOT|token|cookieEnc [...]
    version: 3.10.2
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: navidrome-share
    namespace: media
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:oyqg6h6BwpX67Hv8MtxGMYbpnf39Nt8ge/OhtRfKYHupGQS3GbW3G/ZpiWDmP7FfplIy8GUgPA==,iv:fA34QSpSOQ+a5tI1qBJ8dh39Op8CFz8bXcmxr8ucAbk=,tag:8azkQBYeSwsduvqkUpTzTQ==,type:str]
          kind: Rule
          middlewares:
            - name: redirect
              namespace: traefik
          services:
            - name: navidrome
              port: 4533
          observability:
            accessLogs: true
    tls: {}
sops:
    age:
        - recipient: age1d2g7tgqpfvxulsusn3m608h60h2hne7yqwv5nh5nd24z6h0hgq0skjkhw8
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxOTVEcnMxaDlJWFU2YVNF
[...]
            OXNoWfByKJ3W3fk4xSiG8ekyPiLbqp9hMW6GXovBVE0/B7V3QcnB8Q==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1q522xtgjrmvr43w7um5rh02ta3yfns635680hz4m7uhw0nfqj5zqgxnz27
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzR3JBaDVCU1lUNytjWkxo
[...]
            KYWl94m/e78kdEVq81fLVQ1GPQWpK10vF9PwMgJ2ng+hdTAtE5bEAA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-09-10T13:09:35Z"
    mac: ENC[AES256_GCM,data:zVFfyGbLefY8GVEIcg7iodPF4x0o3Z/1pOhbyL0qV9DC9vsy1VqDCfYKMSzNm6IxU3Ne3bVi1OXwTMUeAEu+ucF8SujgvCuOQmO8N4NA9fHpPelGVVAWnmZ6ZnnGCdSjUsc37zsJghUCUsE+HyzFfTBpKYiqXs5uHZ9mpvJRXh8=,iv:XkFNo54X3E0zu28pTFKoJPsuuS6VZgYsglYrK5UH1AQ=,tag:xw1EK9dwyWQsOmVnyXa7Yw==,type:str]
    encrypted_regex: ^(data|stringData|email|dnsNames|.*(H|h)osts?|hostname|username|password|url|issuer|argocdServerAdminPassword|oidc.config|commonName|literals|.*awsAccessKeyId|.*awsSecretAccessKey|.*defaultAdminPassword|apiToken|accountId|rootPassword|replicationPassword|adminPassword|root_url|client_secret|auth_url|api_url|PIHOLE_DOMAIN|TUNNEL_DNS_UPSTREAM|customDnsEntries|securityTokenKey|emailRecipients|.*provider_url|.*redirect_url|.*accesskeyEncryption|SEMAPHORE_WEB_ROOT|token|cookieEnc [...]
    version: 3.10.2
